# chopper

./: .clang-format  .cmake-format.yaml  .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  ci_codeql.yml  ci_coverage.yml  ci_documentation.yml  ci_header.yml  ci_lint.yml  ci_linux.yml  ci_macos.yml  ci_misc.yml  ci_sanitizer.yml  cron_codeql.yml  cron_cpm.yml  cron_sanitizer.yml
cmake/: CPM.cmake  package-lock.cmake
doc/: CMakeLists.txt  doxygen_cfg
doc/display_layout/: RefSeq.k20.prepare.stats  RefSeq.k20.prepare.time  RefSeq.k20.stats  Refseq.k20.stats  Refseq.k20.time  layouts.tar.zst  mantis_40k.1000.tmax192.stats  mantis_40k.1000.tmax192.time  mantis_40k.1000.tmax64.norearrange.stats  mantis_40k.1000.tmax64.norearrange.time  mantis_40k.1000.tmax64.stats  mantis_40k.1000.tmax64.time  plot.R
include/: ClusterAlgorithm.hpp  chopper_config.hpp  chopper_data.hpp  distance_matrix_initialiser.hpp  graph_output.hpp  map_distance_matrix.hpp  minimizer_msa.hpp  segment_generation_config.hpp  seqan2_msa_alignment.hpp  sequence_input.hpp
include/chopper/: adjust_seed.hpp  bin_prefixes.hpp  chopper_layout.hpp  configuration.hpp  data_store.hpp  detail_apply_prefix.hpp  detail_bin_prefixes.hpp  detail_hibf_user_bins.hpp  detail_node_data.hpp  detail_parse_binning_line.hpp  detail_parse_chopper_pack_header_line.hpp  detail_parse_chopper_pack_line.hpp  detail_starts_with.hpp  detail_string_view.hpp  helper.hpp  hierarchical_interleaved_bloom_filter.hpp  input_functor.hpp  lsh.hpp  next_multiple_of_64.hpp  prefixes.hpp  print_peak_memory_usage.hpp  set_up_parser.hpp  workarounds.hpp
include/chopper/cereal/: path.hpp
include/chopper/count/: check_filenames.hpp  chopper_count.hpp  configuration.hpp  count_config.hpp  count_kmers.hpp  execute.hpp  output.hpp  read_data_file.hpp
include/chopper/layout/: aggregate_by.hpp  arrange_user_bins.hpp  compute_fp_correction.hpp  configuration.hpp  data_store.hpp  determine_best_number_of_technical_bins.hpp  determine_split_bins.hpp  execute.hpp  filenames_data_input.hpp  hibf_statistics.hpp  hierarchical_binning.hpp  ibf_query_cost.hpp  input.hpp  insert_empty_bins.hpp  layout.hpp  output.hpp  previous_level.hpp  print_matrix.hpp  print_result_line.hpp  simple_binning.hpp
include/chopper/pack/: IBF_query_costs.hpp  aggregate_by.hpp  byte_size_to_formatted_str.hpp  chopper_pack.hpp  compute_bin_size.hpp  configuration.hpp  data_store.hpp  filenames_data_input.hpp  hibf_model.hpp  hibf_statistics.hpp  hierarchical_binning.hpp  ibf_query_cost.hpp  pack_config.hpp  pack_data.hpp  previous_level.hpp  print_matrix.hpp  print_result_line.hpp  simple_binning.hpp
include/chopper/search/: chopper_search.hpp  pair_hash.hpp  search.hpp  search_config.hpp  search_data.hpp  sync_out.hpp  technical_binning_directory.hpp
include/chopper/sketch/: check_filenames.hpp  compute_sketches.hpp  estimate_kmer_counts.hpp  execute.hpp  hyperloglog.hpp  output.hpp  read_data_file.hpp  read_hll_files_into.hpp  sketch_file.hpp  toolbox.hpp  user_bin_sequence.hpp
include/chopper/split/: chopper_split.hpp  chopper_split_record.hpp  detail_parse_chopper_pack_line.hpp  distance_matrix_initialiser.hpp  filename_batches_range.hpp  map_distance_matrix.hpp  minimizer_msa.hpp  neighbour_joining.hpp  progressive_alignment.hpp  seqan2_msa_alignment.hpp  sequence_input.hpp  split_config.hpp  split_data.hpp  transform_graphs.hpp  traverse_graph.hpp
include/chopper/stats/: configuration.hpp  parse_layout_header.hpp  parse_layout_line.hpp  read_layout_file.hpp
include/chopper/union/: hyperloglog.hpp  (+1 more)
include/split/: chopper_split.hpp  distance_matrix_initialiser.hpp  minimizer.hpp  minimizer_msa.hpp  seqan2_msa_alignment.hpp  sequence_input.hpp  split_config.hpp  split_data.hpp
src/: CMakeLists.txt  chopper.cpp  chopper_build.cpp  chopper_count.cpp  chopper_layout.cpp  chopper_pack.cpp  chopper_search.cpp  chopper_split.cpp  configuration.cpp  count.cpp  count_HIBF_kmers_based_on_binning.cpp  count_kmers_per_bin.cpp  display_layout.cpp  input_functor.cpp  measure_HIBF.cpp  measure_hyperloglog.cpp  set_up_parser.cpp
src/display_layout/: CMakeLists.txt  display_layout.cpp  general.cpp  process_file.cpp  shared.hpp  sizes.cpp
src/layout/: CMakeLists.txt  determine_best_number_of_technical_bins.cpp  determine_split_bins.cpp  execute.cpp  hibf_statistics.cpp  ibf_query_cost.cpp  input.cpp  output.cpp
src/sketch/: CMakeLists.txt  check_filenames.cpp  output.cpp  read_data_file.cpp  read_hll_files_into.cpp
src/util/: CMakeLists.txt  measure_hyperloglog.cpp
src/util/display_layout/: CMakeLists.txt  compute_ibf_size.hpp  display_layout.cpp  general.cpp  process_file.cpp  shared.hpp  sizes.cpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  api_test.hpp  config_test.cpp  convert_fastq_test.cpp  detail_hibf_user_bins_test.cpp  detail_parse_binning_line_test.cpp  detail_parse_chopper_pack_header_line_test.cpp  detail_parse_chopper_pack_line_test.cpp  helper_test.cpp  input_functor_test.cpp  lsh_test.cpp  minimizer_msa_test.cpp
test/cli/: CMakeLists.txt  cli_chopper_basic_test.cpp  cli_chopper_layout_from_sketch_file.cpp  cli_chopper_layout_statistics_test.cpp  cli_chopper_pack_statistics_test.cpp  cli_chopper_pack_verbose_test.cpp  cli_chopper_pipeline_test.cpp  cli_chopper_pipelline_test.cpp  cli_chopper_split_test.cpp  cli_count_HIBF_kmers_based_on_binning_test.cpp  cli_count_kmers_per_bin_test.cpp  cli_output_sketches.cpp  cli_test.hpp  cli_timing_output_test.cpp  util_display_layout_test.cpp
test/cmake/: app_datasources.cmake  build_googletest.cmake  chopper_require_ccache.cmake  chopper_require_test.cmake
test/coverage/: CMakeLists.txt
test/data/: LOW_LEVEL_IBF_1.out  datasources.cmake  filenames_and_counts.tsv  filenames_counts_and_extra_information.tsv  high_level_ibf.binning  low_level_ibfs.binning  seq1.fa  seq2.fa  seq3.fa  seqinfo.tsv  small.fa  small.hll  small.minimiser  small.split  small2.fa  small2.hll  small_graph.dot  small_traverse.out  traversal.out
test/header/: CMakeLists.txt
(+67 files in other folders)
